gcp-cluster/ingress/ingress-host.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-hosts

spec:
  rules:
    - host: www.adv-it.net
      http:
        paths:
          - backend:
              serviceName: main
              servicePort: 80

    - host: web1.adv-it.net
      http:
        paths:
          - backend:
              serviceName: web1
              servicePort: 80

    - host: web2.adv-it.net
      http:
        paths:
          - backend:
              serviceName: web2
              servicePort: 80

    - host: cat.adv-it.net
      http:
        paths:
          - backend:
              serviceName: tomcat
              servicePort: 8080
